--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://192.168.1.153:3306/rootdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://employee-reg-mysql:3306/rootdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 
